# ktp-kde

./: .gitignore  CMakeLists.txt  INSTALL  README
cmake/modules/: FindKTelepathyTestLib.cmake  FindTelepathyQt4.cmake
ontologies/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh
src/KTelepathy/: AbstractHandleChannelJob  AbstractRequestChannelJob  AbstractTreeItem  AcceptDBusTubeJob  AcceptFileTransferJob  AcceptTcpStreamTubeJob  AccountItem  AccountsModel  AddContactJob  AddContactsToGroupJob  AddMetaContactJob  CMakeLists.txt  Contact  ContactItem  ContactSet  Contactable  ContactsListModel  ContactsModelMenu  CustomPersonSet  Entity  GroupedContactsProxyModel  HandleP2PDBusTubeJob  MetaContactItem  ModelMenu  NepomukSignalWatcher  OfferDBusTubeJob  OfferFileTransferJob  OfferLocalStreamTubeJob  OfferTcpStreamTubeJob  PeopleManager  Person  PersonSet  PersonSetModel  RemoveContactsFromGroupJob  RemoveContactsJob  RequestChannelJob  RequestGenericChannelJob  RequestP2PDBusTubeJob  RequestStreamTubeJob  RequestTextChatJob  (+45 more)
src/KTelepathy/include/: AbstractTreeItem  AcceptDBusTubeJob  AcceptFileTransferJob  AccountItem  AddContactJob  AddContactsToGroupJob  AddMetaContactJob  ContactItem  ContactsListModel  ContactsModelMenu  GroupedContactsProxyModel  MetaContactItem  ModelMenu  NepomukSignalWatcher  OfferDBusTubeJob  OfferTcpStreamTubeJob  RemoveContactsFromGroupJob  RemoveContactsJob  TelepathyAccountProxy  TelepathyBaseJob  TelepathyBridge
src/core/: contact-set.cpp  contact-set.h  contact.cpp  contact.h  contactable.cpp  contactable.h  custom-person-set.cpp  custom-person-set.h  entity.cpp  entity.h  everyone-person-set-model.cpp  everyone-person-set-model.h  everyone-person-set.cpp  everyone-person-set.h  people-manager.cpp  people-manager.h  person-set.cpp  person-set.h  person.cpp  person.h  simple-contact-set.cpp  simple-contact-set.h  simple-person-set.cpp  simple-person-set.h  test-backdoors.cpp  test-backdoors.h
src/declarative/: CMakeLists.txt  declarativeplugins.cpp  declarativeplugins.h
src/jobs/: abstracthandlechanneljob.cpp  abstracthandlechanneljob.h  abstracthandlechanneljob_p.h  abstractrequestchanneljob.cpp  abstractrequestchanneljob.h  abstractrequestchanneljob_p.h  accept-dbustube-job.cpp  accept-dbustube-job.h  accept-file-transfer-job.cpp  accept-file-transfer-job.h  accept-tcp-streamtube-job.cpp  accept-tcp-streamtube-job.h  add-contact-job.cpp  add-contact-job.h  add-contacts-to-group-job.cpp  add-contacts-to-group-job.h  add-meta-contact-job.cpp  add-meta-contact-job.h  handlep2pdbustubejob.cpp  handlep2pdbustubejob.h  offer-dbustube-job.cpp  offer-dbustube-job.h  offer-file-transfer-job.cpp  offer-file-transfer-job.h  offer-local-streamtube-job.cpp  offer-local-streamtube-job.h  offer-tcp-streamtube-job.cpp  offer-tcp-streamtube-job.h  remove-contacts-from-group-job.cpp  remove-contacts-from-group-job.h  remove-contacts-job.cpp  remove-contacts-job.h  requestchanneljob.cpp  requestchanneljob.h  requestchanneljob_p.h  requestgenericchanneljob.cpp  requestgenericchanneljob.h  requestp2pdbustubejob.cpp  requestp2pdbustubejob.h  requeststreamtubejob.cpp  (+13 more)
src/ui/: abstract-tree-item.cpp  abstract-tree-item.h  account-item.cpp  account-item.h  accounts-model.cpp  accounts-model.h  contact-item.cpp  contact-item.h  contacts-list-model.cpp  contacts-list-model.h  contacts-modelmenu.cpp  contacts-modelmenu.h  grouped-contacts-proxy-model.cpp  grouped-contacts-proxy-model.h  meta-contact-item.cpp  meta-contact-item.h  modelmenu.cpp  modelmenu.h  nepomuk-signal-watcher.cpp  nepomuk-signal-watcher.h  person-set-model.cpp  person-set-model.h
tests/: CMakeLists.txt  entity-test.cpp  entity-test.h  everyone-person-set-test.cpp  everyone-person-set-test.h  fake-person-set.cpp  fake-person-set.h  fake-person.cpp  fake-person.h  people-manager-test.cpp  people-manager-test.h  person-set-model-test.cpp  person-set-model-test.h  person-set-test.cpp  person-set-test.h  simple-person-set-test.cpp  simple-person-set-test.h
tests/modeltest/: README
tools/: CMakeLists.txt  lcov-test.sh.in
